--- a/src/main/resources/emall.properties
+++ b/src/main/resources/emall.properties
@@ -1,11 +1,8 @@
 
-ftp.server.ip=你的FTP服务器ip地址
-ftp.user=emallftp
-ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happyemall.com/
+ftp.server.ip=192.168.1.103
+ftp.user=ftpuser
+ftp.pass=123456
+ftp.server.http.prefix=http://img.emall.com/
 
 
-alipay.callback.url=http://www.happyemall.com/order/alipay_callback.do
-
-password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
