--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,7 +1,7 @@
 db.driverLocation=/WEB/java/mysql/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://192.168.1.103:3306/emall?characterEncoding=utf-8
-db.username=emall
+db.url=jdbc:mysql://127.0.0.1:3306/emall?characterEncoding=utf-8
+db.username=root
 db.password=518666
 
 db.initialSize = 20
